fix word break in admin panel

--- a/client/src/pages/admin/style.less
+++ b/client/src/pages/admin/style.less
@@ -11,3 +11,11 @@
 
 @import url("../../../node_modules/font-awesome/less/font-awesome");
 @fa-css-prefix: el-icon-fa;
+
+.el-table .cell{
+  word-break: break-word !important;
+}
+
+label {
+  word-break: break-word !important;
+}
